Fixed playback countdown. Fixed z-index issue in status nav.

--- a/src/js/components/quiz/status/quiz-status.css
+++ b/src/js/components/quiz/status/quiz-status.css
@@ -7,6 +7,7 @@ audio {
 }
 
 .done-button {
+  z-index: 5;
   position: fixed;
   right: 0;
   bottom: 0;
